# clinical-ai-platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
backend/app/: main.py
backend/app/api/: dependencies.py  routes.py
backend/app/core/: config.py  embedding_store.py  logging.py  metrics.py  middleware.py  queue.py  resources.py  similarity.py
backend/app/models/: biomedclip_model.py  embedding.py  hf_model.py  inference.py  manager.py  torch_model.py
backend/app/schemas/: requests.py  responses.py
backend/app/services/: embedding.py  image_processing.py  inference.py
backend/app/workers/: inference_worker.py
docs/adr/: 0002-model-loading-strategy.md
docs/architecture/: performance-baseline.md
infrastructure/docker/: Dockerfile  docker-compose.yml
scripts/: find_similar_images.py  load_test.py
tests/: conftest.py  test_embedding.py  test_embedding_store.py  test_image_processing.py  test_integration.py  test_model_manager.py  test_resources.py  test_routes.py  test_similarity.py
