[project]
name = "clinical-ai-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.1",
    "prometheus-client>=0.25.0",
    "pydantic-settings>=2.14.2",
    "uvicorn>=0.49.0",
]

[project.scripts]
# Defines the `serve` command: `uv run serve` calls app.cli:main.
serve = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Our package lives under backend/, not at the repo root.
packages = ["backend/app"]

[[tool.uv.index]]
# Public PyPI so clones and CI resolve anywhere. Do not point this at an
# internal mirror — CI runners cannot reach internal hosts.
url = "https://pypi.org/simple"
default = true

#[[tool.uv.index]]
## Public PyPI so clones and CI resolve anywhere. Do not point this at an
## internal mirror — CI runners cannot reach internal hosts.
#url = "https://pypi.org/simple"
#default = true

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
# Put backend/ on the import path so `from app.main import app` resolves,
# and point pytest at the tests/ directory.
pythonpath = ["backend"]
testpaths = ["tests"]
